# network-datasets

./: .gitignore  README.md  build_docs.bat  build_docs.py  data_validate.py  pyproject.toml  registry.json
.github/workflows/: doc_workflow.yaml  docs.yml
.pytest_cache/v/cache/: lastfailed  nodeids
datasets/distribution_substation_liang2022/: dataset.yaml
datasets/ema_highway/: dataset.yaml
datasets/toynet_11edges/docs/: PROVENANCE.md
distribution-substation-liang2022/v1/data/: edges.json  prob.json  probs.json
distribution-substation-liang2022/v1/docs/: CHANGELOG.md  PROVENANCE.md  README.md
distribution-substation-liang2022/v1/scripts/: demo.ipynb  demo_edge_prob_update.ipynb  demo_sys_fun.ipynb  utils.py
distribution_substation_liang2022/v1/docs/: README.md
distribution_substation_liang2022/v1/scripts/: utils_sub.py
docs/: Makefile  conf.py  contributors.rst  datasets.rst  generating random networks.rst  how to contribute.rst  index.rst  make.bat  ndtools.rst
docs/_build/doctrees/: README.doctree  api.doctree  contributors.doctree  datasets.doctree  examples.doctree  generating random networks.doctree  how to contribute.doctree  index.doctree  installation.doctree  ndtools.doctree  (+1 more)
ndtools/: __init__.py  fun_binary_graph.py  graphs.py  io.py  network_generator.py
ndtools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
schema/: edges.schema.json  nodes.schema.json  probs.schema.json
tests/: test_fun_binary_graph.py  test_graphs.py  test_network_generator.py
toynet-11edges/docs/: README.md
toynet_11edges/docs/: CHANGELOG.md
(+48 files in other folders)
