[project]
name = "ndtools"
version = "0.1.1"
requires-python = ">=3.9"
dependencies = ["networkx>=3.0", "pyyaml>=6.0", "jsonschema>=4.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ndtools*", "distribution_substation_liang2022.v1.scripts*"]
